change the header
Canging the html file

--- a/index.html
+++ b/index.html
@@ -15,55 +15,45 @@
     <link rel="stylesheet" href="responsive.css" />
   </head>
   <body>
+
     <header id="home">
-      <!-- navbar -->
-      <nav id="nav">
-        <div class="nav-center">
-          <!-- nav header -->
-          <div class="nav-header">
-            <img src="./logo.png" class="logo" alt="logo" />
-            <button class="nav-toggle">
-              <i class="fas fa-bars"></i>
-            </button>
-          </div>
-          <!-- links -->
-          <div class="links-container">
-            <ul class="links">
-              <li>
-                <a href="#home" class="scroll-link">home</a>
-              </li>
-              <li>
-                <a href="#about" class="scroll-link">about</a>
-              </li>
-              <li>
-                <a href="#services" class="scroll-link">services</a>
-              </li>
-              <li>
-                <a href="#products" class="scroll-link">Products</a>
-              </li>
-              <li>
-                <a href="#review" class="scroll-link">Review</a>
-              </li>
-              <li>
-                <a href="#question" class="scroll-link">FAQ</a>
-              </li>
-            </ul>
-          </div>
-        </div>
-      </nav>
-      <!-- banner -->
-      <div class="banner">
-        <div class="container">
-          <h1>test project</h1>
-          <p>
-            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quas eos
-            neque sunt in? Id, necessitatibus quos quisquam distinctio
-            laudantium fugiat?
-          </p>
-          <a href="#Conntact" class="scroll-link btn btn-white">Conntact Us</a>
-        </div>
+  <!-- navbar -->
+  <nav id="nav">
+    <div class="nav-center">
+      <!-- nav header -->
+      <div class="nav-header">
+        <img src="./logo.png" class="logo" alt="Logo" />
+        <button class="nav-toggle">
+          <i class="fas fa-bars"></i>
+        </button>
       </div>
-    </header>
+      <!-- links -->
+      <div class="links-container">
+        <ul class="links">
+          <li><a href="#home" class="scroll-link">Home</a></li>
+          <li><a href="#about" class="scroll-link">About Me</a></li>
+          <li><a href="#services" class="scroll-link">Resume</a></li>
+          <li><a href="#products" class="scroll-link">Portfolio</a></li>
+          <li><a href="#review" class="scroll-link">Review</a></li>
+          <li><a href="#question" class="scroll-link">FAQ</a></li>
+        </ul>
+      </div>
+    </div>
+  </nav>
+  <!-- banner -->
+  <div class="banner">
+    <div class="container">
+      <h1>Who I Am</h1>
+      <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas eos
+        neque sunt in? Id, necessitatibus quos quisquam distinctio laudantium
+        fugiat?
+      </p>
+      <a href="#contact" class="scroll-link btn btn-white">Contact Us</a>
+    </div>
+  </div>
+</header>
+
 
     <!-- about -->
     <section class="section" id="about">
