--- a/index.html
+++ b/index.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="Yas Digital Marketing - Professional services and solutions.">
+  <meta name="keywords" content="Digital Marketing, Services, SEO, Social Media, Products">
   <title>Yas Website</title>
   <link rel="icon" type="image/x-icon" href="/favicon.png">
-  <!-- Font Awesome -->
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css" />
-  <!-- Styles -->
-  <link rel="stylesheet" href="styles.css" />
-  <link rel="stylesheet" href="responsive.css" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css">
+  <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="responsive.css">
 </head>
 <body>
   <!-- Header -->
@@ -17,8 +17,8 @@
     <nav id="nav">
       <div class="nav-center">
         <div class="nav-header">
-          <img src="./logo.png" class="logo" alt="Logo" />
-          <button class="nav-toggle">
+          <img src="./logo.png" class="logo" alt="Logo">
+          <button class="nav-toggle" aria-label="Toggle Navigation">
             <i class="fas fa-bars"></i>
           </button>
         </div>
@@ -42,17 +42,11 @@
       </div>
     </div>
   </header>
-
-  <!-- Other Sections -->
-  <!-- Add your remaining sections: About, Services, Products, Reviews, FAQ, Footer -->
-
   <!-- Footer -->
   <footer id="contact">
     <p>&copy; <span id="date"></span> Yas Digital Marketing. All rights reserved.</p>
     <a href="#home" class="top-link"><i class="fas fa-arrow-up"></i></a>
   </footer>
-
-  <!-- JavaScript -->
   <script src="app.js"></script>
 </body>
 </html>
