Update Home page title
Home page title

--- a/index.html
+++ b/index.html
@@ -54,12 +54,10 @@
       <!-- banner -->
       <div class="banner">
         <div class="container">
-          <h1>who I Am</h1>
-          <p>
-            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quas eos
-            neque sunt in? Id, necessitatibus quos quisquam distinctio
-            laudantium fugiat?
-          </p>
+          <h1>Boost Your Website Traffic with a Trusted SEO Specialist</h1>
+          <h2>
+            I Help Businesses Grow Organically by Optimizing Websites for Search Engines and Users Alike
+          </h2>
           <a href="#Conntact" class="scroll-link btn btn-white">Conntact Us</a>
         </div>
       </div>
