--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                 <a href="#about" class="scroll-link">About Me</a>
               </li>
               <li>
-                <a href="#services" class="scroll-link">Resume</a>
+                <a href="#services" class="scroll-link">Services</a>
               </li>
               <li>
                 <a href="#products" class="scroll-link">portfolio</a>
