--- a/index.html
+++ b/index.html
@@ -54,10 +54,10 @@
       <!-- banner -->
       <div class="banner">
         <div class="container">
-          <h1>Boost Your Website Traffic with a Trusted SEO Specialist</h1>
-          <h2>
-            I Help Businesses Grow Organically by Optimizing Websites for Search Engines and Users Alike
-          </h2>
+          <h1>From Invisible to Unstoppable: Let’s Grow Your Business Online</h1>
+          <p>
+           I provide a full range of digital marketing services to help businesses improve their online visibility, attract more customers, and achieve sustainable growth. My approach combines creativity, data, and strategy to deliver results that matter.
+          </p>
           <a href="#Conntact" class="scroll-link btn btn-white">Conntact Us</a>
         </div>
       </div>
