--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
     <section class="section" id="about">
       <div class="title">
         <h2>About<span>Me</span></h2>
-        <h3 class="about-title">Raise Yourself To Help Mankind</h3>
+        <h3 class="about-title">Your Digital Marketing Specialist</h3>
       </div>
       <div class="about-center section-center" >
         <article class="about-img">
@@ -84,26 +84,26 @@
 <!--start about items -->
             <div class="content active" id="history">
                 <h3>History</h3>
-                <p>I'm baby wolf Umami kinfolk salvia jean shorts offal venmo. Knausgaard tilde try-hard, woke fixie banjo man bun. Small batch tumeric mustache tbh wayfarers 8-bit shaman chartreuse tacos. Viral direct trade hoodie ugh chambray, craft beer pork belly flannel tacos single-origin coffee art party migas plaid pop-up.</p>
+                <p>With 12 years of experience, I’ve helped businesses of all sizes achieve their digital marketing goals. From increasing website traffic to generating leads and sales, I deliver data-driven strategies tailored to your unique needs</p>
             </div>
 <!--end of about items -->
 <!--start about items -->
             <div class="content" id="vision">
-                <h3>Vision</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto
-                  asperiores debitis incidunt, eius earum ipsam cupiditate libero?
-                  Iste, doloremque nihil?</p>
+                <h3>Mission</h3>
+                <p>Our mission is simple: to help you build a powerful online presence and drive measurable growth. Whether you're looking for better search engine rankings, engaging social media campaigns, or high-converting paid ads, I have the tools and experience to make it happen.</p>
             </div>
 <!--end of about items -->
 <!--start about items -->
             <div class="content" id="goals">
-                <h3>Goals</h3>
-                <p>mumblecore vice pop-up XOXO lomo kombucha glossier bicycle rights. Umami kinfolk salvia jean shorts offal venmo. Knausgaard tilde try-hard, woke fixie banjo man bun. Small batch tumeric mustache tbh wayfarers 8-bit shaman chartreuse tacos. Viral direct trade hoodie ugh chambray, craft beer pork belly flannel tacos single-origin coffee art party migas plaid pop-up.</p>
+                <h3>Vision</h3>
+                <p>To become a trusted partner for businesses worldwide, known for delivering exceptional digital marketing solutions that transform brands into market leaders. We envision a future where businesses—big and small—have the tools and strategies they need to stand out, grow, and thrive in an ever-evolving online landscape.</p>
             </div>
 <!--end of about items -->
           </div>
         </article>
       </div>
+
+      <a href="#" class="cta-button" id="ctaButton">Schedule a Free Consultation</a>
     </section>
     
 <!-- services -->
