--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
       </div>
       <div class="about-center section-center" >
         <article class="about-img">
-          <img src="/about.jpg" alt="about"/>
+          <img src="about.jpg" alt="about"/>
         </article>
         <article class="about">
 <!-- btn container part -->
