--- a/SocialMedia.html
+++ b/SocialMedia.html
@@ -152,16 +152,35 @@
           <a href="#">LinkedIn</a>
         </div>
       </div>
-      <form class="form footer-items" action="#">
+      
+      <form class="form footer-items" action="https://gmail.us8.list-manage.com/subscribe/post?u=46e094e5fe1640760fc397764&amp;id=9bb1184330&amp;f_id=008c08e1f0" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank">
         <p>Subscribe to our Newsletter</p>
-        <input type="text" placeholder="Name" name="name" required>
-        <input type="email" placeholder="Email address" name="email" required>
-        <label>
-          <input type="checkbox" checked="checked" name="subscribe">
-          <p>Daily Newsletter</p>
-        </label>
-        <input type="submit" value="Subscribe">
-      </form>
+            <div class="mc-field-group"></div>    
+                <input type="text" placeholder="Name" name="name" required>
+                <input type="email" placeholder="Email address*" name="EMAIL" class="required email" id="mce-EMAIL" required="" value="">
+                <label>
+                    <input type="checkbox" checked="checked" name="subscribe">
+                    <p>Daily Newsletter</p>
+                </label>
+        <div hidden=""><input type="hidden" name="tags" value="3319231"></div>
+          <div id="mce-responses" class="clear foot">
+              <div class="response" id="mce-error-response" style="display: none;"></div>
+              <div class="response" id="mce-success-response" style="display: none;"></div>
+          </div>
+      <div aria-hidden="true" style="position: absolute; left: -5000px;">
+          /* real people should not fill this in and expect good things - do not remove this or risk form bot signups */
+          <input type="text" name="b_46e094e5fe1640760fc397764_9bb1184330" tabindex="-1" value="">
+      </div>
+          <div class="optionalParent">
+              <div class="clear foot">
+                  <input type="submit" name="subscribe" id="mc-embedded-subscribe" class="button" value="Subscribe">
+                  <p><a href="http://eepurl.com/i7Osks" ><span style="display: inline-block;  border-radius: 4px;"></span></a></p>
+              </div>
+          </div>
+        </form>
+     
+
+
     </div>
     <p>
       Copyright &copy; Yas Digital Marketing
@@ -173,6 +192,7 @@
   </footer>
 
   <!-- JavaScript -->
+  <script type="text/javascript" src="//s3.amazonaws.com/downloads.mailchimp.com/js/mc-validate.js"></script><script type="text/javascript">(function($) {window.fnames = new Array(); window.ftypes = new Array();fnames[0]='EMAIL';ftypes[0]='email';fnames[1]='FNAME';ftypes[1]='text';fnames[2]='LNAME';ftypes[2]='text';fnames[3]='ADDRESS';ftypes[3]='address';fnames[4]='PHONE';ftypes[4]='phone';fnames[5]='BIRTHDAY';ftypes[5]='birthday';fnames[6]='COMPANY';ftypes[6]='text';}(jQuery));var $mcj = jQuery.noConflict(true);</script>
   <script src="app.js"></script>
 </body>
 </html>
