--- a/SEO.html
+++ b/SEO.html
@@ -7,7 +7,7 @@
   <meta name="description" content="Discover how Yas Digital Marketing helps you amplify your online presence with expert social media marketing strategies.">
   <meta name="keywords" content="Social Media Marketing, Yas Digital Marketing, Social Media Growth, Marketing Strategies, Social Engagement">
   <meta name="author" content="Yas Digital Marketing">
-  <title>Social Media Marketing | Yas Digital Marketing</title>
+  <title>SEO | Digital Marketing</title>
 
   <link rel="icon" type="image/x-icon" href="/favicon.png">
   <!-- Font Awesome -->
@@ -132,7 +132,7 @@
           </div>
         </form>
 
-        
+
     </div>
   </div>
   
