organising the home page

--- a/index.html
+++ b/index.html
@@ -57,9 +57,9 @@
       <!-- banner -->
       <div class="banner">
         <div class="container">
-          <div style="text-align: center; margin-top: 50px;">
-            <h1 style="font-size:54px; margin-bottom: 50px;">Grow Online with Expert Digital Marketing</h1>
-            <h2 style="font-size: 24px;">From SEO to Social Media, We Deliver Customized Strategies to Help Your Business Grow.</h2>
+          <div class="headline">
+            <h1>Grow Online with Expert Digital Marketing</h1>
+            <h2>From SEO to Social Media, We Deliver Customized Strategies to Help Your Business Grow.</h2>
             <a href="/contact" class="cta-button">Schedule a Free Consultation</a>
           </div>
 
