prepar a sampel for subpages and conect them to main page

--- a/index.html
+++ b/index.html
@@ -200,27 +200,27 @@
           <ul>
             <!-- Use consistent structure for each service -->
             <li onmouseover="move(0)">
-                <a href="SocialMedia.html" class="service-link">
+                <a href="onsite.html" class="service-link">
                     <h4>On-Site</h4> <!-- Add heading for clarity and consistency -->
                 </a>
             </li>
             <li onmouseover="move(1)">
-                <a href="SEO.html" class="service-link">
+                <a href="ofpage.html" class="service-link">
                     <h4>Off-Page</h4> <!-- Adjusted for consistency -->
                 </a>
             </li>
             <li onmouseover="move(2)">
-                <a href="TechnicalSEO.html" class="service-link"> <!-- Assuming you have a link -->
+                <a href="technical.html" class="service-link"> <!-- Assuming you have a link -->
                     <h4>Technical</h4>
                 </a>
             </li>
             <li onmouseover="move(3)">
-                <a href="Analysis.html" class="service-link"> <!-- Assuming you have a link -->
+                <a href="analysis.html" class="service-link"> <!-- Assuming you have a link -->
                     <h4>Analysis</h4>
                 </a>
             </li>
             <li onmouseover="move(4)">
-                <a href="Copywriting.html" class="service-link"> <!-- Assuming you have a link -->
+                <a href="content.html" class="service-link"> <!-- Assuming you have a link -->
                     <h4>Content</h4>
                 </a>
             </li>
