--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
           </div>
 
 
-          <a href="#Conntact" class="scroll-link btn btn-white">Conntact Me</a>
+          <!-- <a href="#Conntact" class="scroll-link btn btn-white">Conntact Me</a> -->
         </div>
       </div>
     </header>
