changing the galery

--- a/index.html
+++ b/index.html
@@ -239,10 +239,10 @@
             <!-- <div class="items" onclick="popup()">
                 <img src="img/1.jpg">
                 <div class="info">
-                    <h2>product1</h2>
-                    <p>Details</p>
-                    <span>15000 Ft</span>
-                    <a href="#">Buy</a>
+                    <h2>Full SEO Package</h2>
+                    <p>website SEO optimization, full on page and off page</p>
+                    <span>400$ / Project</span>
+                    <a href="#">Buy Now</a>
                 </div>
             </div> 
         -->
@@ -254,14 +254,16 @@
         <div id="overlay" class="hide" onclick="closeAll()">
             <div id="pop" class="hide">
                 <img id="big_img" src="img/1.jpg">
-                <p>More Details</p>
+                <h2 id="pop_title"></h2>
+                <p id="pop_desc"></p>
+                <a id="pop_cta" href="#" target="_blank" class="btn">Learn More</a>
             </div>
         </div>
         
     </div>
+</section>
     
 <!-- review -->
-    </section>
     <section id="review" class="section">
       <div class="title">
         <h2>our reviews </h2>
