--- a/index.html
+++ b/index.html
@@ -256,7 +256,7 @@
                 <h2 id="pop_title"></h2>
                 <img id="big_img" src="img/1.jpg">
                 <p id="pop_desc"></p>
-                <a id="pop_cta" href="#" target="_blank" class="btn">Learn More</a>
+                <a id="pop_cta" href="#" target="_blank" class="btn">Start Now</a>
             </div>
         </div>
         
