--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="description" content="Expert digital marketing services to boost traffic, leads, and sales. Contact us for customized SEO, PPC, and social media strategies tailored to your business.">
     <meta name="keywords" content="digital marketing services, SEO, social media marketing, PPC, online marketing, digital marketing expert">
 
-    <link rel="icon" type="image/x-icon" href="/favicon.png">
+    <link rel="icon" type="image/x-icon" href="img/favicon.png">
     <!-- font-awesome -->
     <link
       rel="stylesheet"
@@ -25,7 +25,7 @@
         <div class="nav-center">
           <!-- nav header -->
           <div class="nav-header">
-            <img src="./logo.png" class="logo" alt="logo" />
+            <img src="img/logo3.png" class="logo" alt="logo" />
             <button class="nav-toggle">
               <i class="fas fa-bars"></i>
             </button>
@@ -78,7 +78,7 @@
       </div>
       <div class="about-center section-center" >
         <article class="about-img">
-          <img src="/about.jpg" alt="about"/>
+          <img src="img/about.jpg" alt="about"/>
         </article>
         <article class="about">
 <!-- btn container part -->
@@ -385,7 +385,7 @@
     <footer class="section footer" id="Conntact">
       <div class="all-footer">
         <div class="firstPart footer-items">
-          <img src="./logo3.png"/>
+          <img src="img/footer.png"/>
         </div>
         <div class="secondPart footer-items">
           <a href="#Services">Services</a>
