--- a/index.html
+++ b/index.html
@@ -254,7 +254,7 @@
         <div id="overlay" class="hide" onclick="closeAll()">
             <div id="pop" class="hide">
                 <h2 id="pop_title"></h2>
-                <img id="big_img" src="img/1.jpg">
+                <img id="big_img" src="img/products/1.jpg">
                 <p id="pop_desc"></p>
                 <a id="pop_cta" href="#" target="_blank" class="btn">Start Now</a>
             </div>
@@ -273,7 +273,7 @@
         <!-- review -->
         <article class="review">
           <div class="img-container">
-            <img src="person-1.jpeg" id="person-img" alt="" />
+            <img src="/img/person-1.png" id="person-img" alt="" />
           </div>
           <h4 id="author">sara jones</h4>
           <p id="job">ux designer</p>
